fixed TV Shows name and first air date not showing up

--- a/src/app/components/search-bar/search-container/search-container.component.css
+++ b/src/app/components/search-bar/search-container/search-container.component.css
@@ -101,8 +101,8 @@
   cursor: pointer;
   color: var(--White);
   text-align: center;
-  text-transform: uppercase;
   letter-spacing: 1px;
+  opacity: 0.9;
 }
 
 .show-more:focus {
